# CW6

./: README.md  pyproject.toml
skymarket/: settings.py  urls.py
